--- a/package.json
+++ b/package.json
@@ -69,6 +69,9 @@
   "scripts": {
     "prebuild": "npm run assemble clean && npm run assemble",
     "build": "gulp build",
-    "assemble": "./node_modules/assemble/bin/assemble.js"
-  }
+    "assemble": "./node_modules/assemble/bin/assemble.js",
+    "issues": "watson -s dirty",
+    "issuesJson": "watson -s dirty --format json && mv .watsonresults watson.json",
+    "github": "watson --update --format silent"  
+}
 }
