--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-if": "^1.2.1",
     "gulp-imagemin": "^2.0.0",
     "gulp-jshint": "^1.5.3",
+    "gulp-jsvalidate": "^2.0.0",
     "gulp-load-plugins": "^0.8.0",
     "gulp-pleeease": "^1.2.0",
     "gulp-rename": "^1.2.0",
@@ -53,7 +54,7 @@
     "gulp-useref": "^1.0.2",
     "handlebars": "^3.0.0",
     "handlebars-helpers": "git://github.com/doowb/handlebars-helpers#v0.7.0",
-    "html5-lint": "^0.2.3",
+    "html5-lint": "^0.2.5",
     "jshint-stylish": "^1.0.0",
     "main-bower-files": "^2.5.0",
     "opn": "^1.0.0",
@@ -63,6 +64,7 @@
     "sprintf-js": "^1.0.2",
     "through2": "^0.6.3",
     "underscore.string": "^2.4.0",
+    "walk": "^2.3.9",
     "wiredep": "^2.0.0",
     "yamljs": "^0.2.1",
     "yargs": "^3.5.3"
@@ -70,11 +72,12 @@
   "scripts": {
     "prebuild": "npm run assemble clean && npm run assemble",
     "build": "gulp build",
+    "postbuild": "node lib/html-validator.js",
     "assemble": "./node_modules/assemble/bin/assemble.js",
     "issues": "watson -s dirty",
     "issuesJson": "watson -s dirty --format json && mv .watsonresults watson.json",
     "github": "watson --update --format silent",
     "postinstall": "bower install && bundle install",
-    "deploy": "npm run assemble clean && export NODE_ENV=production; npm run assemble && gulp build && ./bin/deploy"
+    "deploy": "npm run assemble clean && export NODE_ENV=production; npm run assemble && run build && ./bin/deploy"
   }
 }
