--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "html5-lint": "^0.2.5",
     "jshint-stylish": "^1.0.0",
     "main-bower-files": "^2.5.0",
+    "moment": "^2.9.0",
     "opn": "^1.0.0",
     "remarkable": "^1.6.0",
     "rss": "^1.1.1",
