--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "gulp-filter": "^2.0.2",
     "gulp-git": "^1.1.0",
     "gulp-htmlmin": "^1.1.1",
-    "gulp-if": "^1.2.1",
+    "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.0.0",
+    "gulp-inline-css": "^2.0.0",
     "gulp-jshint": "^1.5.3",
     "gulp-jsvalidate": "^2.0.0",
     "gulp-load-plugins": "^0.8.0",
