--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "browser-sync": "^1.8.2",
     "chalk": "^1.0.0",
     "del": "^1.1.1",
+    "fontfaceobserver": "^1.4.3",
     "gh": "^1.11.4",
     "glob": "^4.3.1",
     "gulp": "^3.6.0",
@@ -37,6 +38,7 @@
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.0.0",
     "gulp-inline-css": "^2.0.0",
+    "gulp-inline-source": "^1.2.0",
     "gulp-jshint": "^1.5.3",
     "gulp-jsvalidate": "^2.0.0",
     "gulp-load-plugins": "^0.8.0",
@@ -51,6 +53,7 @@
     "gulp-save": "^1.0.4",
     "gulp-sitemap": "^2.0.1",
     "gulp-size": "^1.1.0",
+    "gulp-smoosher": "0.0.7",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-tag-version": "^1.2.1",
     "gulp-typogr": "^1.0.0",
