--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "gulp-uglify": "^1.1.0",
     "gulp-useref": "^1.0.2",
     "handlebars": "^3.0.0",
+    "handlebars-helper-moment": "^0.2.0",
     "handlebars-helpers": "git://github.com/doowb/handlebars-helpers#v0.7.0",
     "html5-lint": "^0.2.5",
     "jshint-stylish": "^1.0.0",
