--- a/data/characters.yaml
+++ b/data/characters.yaml
@@ -62,6 +62,44 @@ characters:
             - "Sigurd Gudhleksson, brother (deceased)"
             - "Kóri Brandrsson, husband"
             - "Vigar Kórisson, son"
+    helga:
+        answers:
+            - "Helga Yngvesdotter, though also sometimes Helga Ramn, which means raven"
+            - "Seventeen years"
+            - "Curly black hair with bleached ends, dark skin and dark eyes, near black in shade. A blaumann, in fact"
+            - "Being pulled out of the ocean after nearly drowning. The King's men called me a changeling and threw me into the water, after they executed my father and my stepmother. Joke's on them, though. I will get my vengeance"
+            - "In the long term, I want to avenge my father. Short term, I have been tasked by the deity Ran to recover an important artifact that will help me gain what I need. As her priestess, I will have power"
+            - "My father was Yngve Agrarsson, a chieftain in Viken. He bought my mother from a merchant on one of his travels, and gave her the name Svaneblau--the Black Swan. He loved her so much that he married her, despite everything. And she loved him"
+            - "My mother taught me songs from her homeland, and my stepmother Torun Hildingsdotter taught what I would need to know as my father's heir. I think it hurt her that she could never bear my father a son, but she never took it out on me. I think she loved me like a daughter"
+            - "Yes, I do"
+            - "Ingrid Sigurdsdotter. She was born a thrall on my father's estate, and is a few years younger than I am"
+            - "Yes, I can talk people into a lot of things"
+            - "Above my left eye. I fell from a horse"
+            - "Decently. My father thought it was important I knew how to"
+            - "Yes. The one I prefer is blueberries"
+            - "I am not sure what you are asking me"
+            - "I have more ambition, but it is necessary for my survival, and the few of my people who still look to me"
+            - "Two things. A diplomat who suggested to my father that he sell me, and my father's dismissal. That was the day I recognised that I would be underestimated, and that I had my father's trust. The second moment was my father's execution. He refused to bow to the King, and he paid for it with his life"
+            - "No"
+            - "I snap my fingers when I think"
+            - "Yes, I am very careful with who is affected by my actions. Honour and family is more important than anything else"
+        names:
+            - "Helga Ramn"
+            - "Helga Ransdotter"
+            - "Helga of Ran"
+        pronouns: She
+        stories:
+            - Last Priestess of Ran
+        status: alive
+        era: "Iron Age"
+        age: 17
+        origin: "Viken, Norway"
+        allegiance: Ran
+        culture: Norwegian
+        family:
+            - "Yngve Agrarsson, father (deceased)"
+            - "Svanebalu, mother (deceased)"
+            - "Torun Hildingsdotter, stepmother (deceased)"
     katja:
         answers:
             - "Katja Bradley"
