--- a/data/site.yaml
+++ b/data/site.yaml
@@ -28,6 +28,9 @@ navigation:
             bothildr-gudhleksdotter:
                 path: /characters/bothildr-gudhleksdotter
                 item: Bóthildr
+            helga-yngvesdotter:
+                path: /characters/helga-yngvesdotter
+                item: Helga
             katja-bradley:
                 path: /characters/katja-bradley
                 item: Katja
