--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "assemble": "git://github.com/assemble/assemble.git#v0.6.0",
     "browser-sync": "^1.8.2",
     "chalk": "^1.0.0",
+    "cheerio": "^0.19.0",
     "del": "^1.1.1",
     "fontfaceobserver": "^1.4.3",
     "gh": "^1.11.4",
