--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fontfaceobserver": "^1.4.3",
     "gh": "^1.11.4",
     "glob": "^4.3.1",
+    "gray-matter": "^2.0.0",
     "gulp": "^3.6.0",
     "gulp-bump": "^0.2.2",
     "gulp-cache": "^0.2.2",
@@ -34,6 +35,7 @@
     "gulp-csso": "^0.2.6",
     "gulp-extname": "^0.2.0",
     "gulp-filter": "^2.0.2",
+    "gulp-front-matter": "^1.2.2",
     "gulp-git": "^1.1.0",
     "gulp-htmlmin": "^1.1.1",
     "gulp-if": "^1.2.5",
@@ -60,6 +62,7 @@
     "gulp-typogr": "^1.0.0",
     "gulp-uglify": "^1.1.0",
     "gulp-useref": "^1.0.2",
+    "gulp-util": "^3.0.4",
     "handlebars": "^3.0.0",
     "helper-moment": "^0.1.0",
     "html5-lint": "^0.2.5",
@@ -73,6 +76,7 @@
     "sprintf-js": "^1.0.2",
     "through2": "^0.6.3",
     "underscore.string": "^2.4.0",
+    "vinyl": "^0.4.6",
     "walk": "^2.3.9",
     "wiredep": "^2.0.0",
     "yamljs": "^0.2.1",
